Fix bug #25900 (document->get_elements_by_tag_name with default xmlns)